# pre-commit-msg

./: .flake8  LICENSE  README.md  pyproject.toml
src/pre_commit_msg/: __init__.py  hook.py
