[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pre-commit-msg"
version = "0.1.0"
authors = [
  { name="Hugo Viana", email="hugosemianoviana@gmail.com" },
]
description = "Pre-Commit Hook enforcing validation rules on the commit msg"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
]

[project.entry-points.console_scripts]
pre-commit-msg = "pre_commit_msg.hook:main"

[project.urls]
"Homepage" = "https://github.com/hugo-viana/pre-commit-msg"
"Bug Tracker" = "https://github.com/hugo-viana/pre-commit-msg/issues"
